--- a/README.org
+++ b/README.org
@@ -1,3 +1,5 @@
+#+ATTR_HTML: width="100px"
+#+ATTR_ORG: :width 100
 
 #+html: <p align="center"> <img src=".assets/preview.png"> </p>
 
@@ -22,30 +24,9 @@
 | themes      | list all themes                 |                         |
 
 * Themes
+| [[file:.assets/gruvbox.png]] | [[file:.assets/gruvbox-light.png]] | [[file:.assets/nord.png]] |
+| [[file:.assets/dracula.png]] | [[file:.assets/vice.png]] | [[file:.assets/decaf.png]] |
 
-** Gruvbox-dark
-
-#+html: <p align="center"> <img src=".assets/gruvbox.png"> </p>
-
-** Gruvbox-light
-
-#+html: <p align="center"> <img src=".assets/gruvbox-light.png"> </p>
-
-** Nord
-
-#+html: <p align="center"> <img src=".assets/nord.png"> </p>
-
-** Dracula
-
-#+html: <p align="center"> <img src=".assets/dracula.png"> </p>
-
-** Vice
-
-#+html: <p align="center"> <img src=".assets/vice.png"> </p>
-
-** Decaf
-
-#+html: <p align="center"> <img src=".assets/decaf.png"> </p>
 * Contributing 
 
 Feel free to open issues, suggesting features or other things!
