--- a/README.org
+++ b/README.org
@@ -7,6 +7,18 @@
 
 #+html: <p align="center"> <a href="https://yrwq.github.io/termstart"> Try it! </p>
 
+* Installing
+
+Termstart is now available as an extension on Google Chrome only  
+To do this:  
+
+ 1. Clone this repository to somewhere like `Documents`
+ 2. Start Chrome and go to `chrome://extensions`
+ 3. Enable `Developer Mode` in the top-right corner of the page
+ 4. In the top-left corner of the page, click `Load Unpacked`
+ 5. Select the cloned repo folder
+ 6. Open a new tab and enjoy
+
 * Usage
 
 | Command/key | What it does                    | Example                 |
@@ -28,8 +40,6 @@
 | [[file:.assets/gruvbox.png]] | [[file:.assets/gruvbox-light.png]] | [[file:.assets/nord.png]]  |
 |--------------------------+--------------------------------+------------------------|
 | [[file:.assets/dracula.png]] | [[file:.assets/vice.png]]          | [[file:.assets/decaf.png]] |
-
-
 
 * Contributing 
 
